Add logging feature. [ + ] Core class logs info about loaded interfaces and implementations. Logger implementation hides behind system interface [ + ] HelloWorld application has naive implementation of logger [ * ] Changed bytecode level from 8 to 9 due to usage of Java 9 feature: collection factory methods https://openjdk.java.net/jeps/269