@@ -2,13 +2,14 @@ package com.zkejid.constructor.core.examples.helloworld;
 
 import com.zkejid.constructor.core.api.v1.ConstructionException;
 import com.zkejid.constructor.core.api.v1.ConstructorPart;
+import com.zkejid.constructor.core.api.v1.CoreLogging;
 import com.zkejid.constructor.core.api.v1.EntryPoint;
 import com.zkejid.constructor.javasdk.system.api.v1.System;
 
 import java.util.Collections;
 import java.util.Set;
 
-public class HelloWorldPart implements ConstructorPart, EntryPoint {
+public class HelloWorldPart implements ConstructorPart, EntryPoint, CoreLogging {
 
     private System system;
 
@@ -19,12 +20,12 @@ public class HelloWorldPart implements ConstructorPart, EntryPoint {
 
     @Override
     public Set<Class<?>> getInterfacesProvided() {
-        return Collections.singleton(EntryPoint.class);
+        return Set.of(EntryPoint.class, CoreLogging.class);
     }
 
     @Override
     public Object getImplementation(Class<?> anInterface) {
-        if (EntryPoint.class.equals(anInterface)) {
+        if (EntryPoint.class.equals(anInterface) || CoreLogging.class.equals(anInterface)) {
             return this;
         } else {
             throw new ConstructionException("Part does not provide " + anInterface);
@@ -48,5 +49,10 @@ public class HelloWorldPart implements ConstructorPart, EntryPoint {
     @Override
     public void main(String[] args) {
         system.out().println("Hello world!");
+    }
+
+    @Override
+    public void log(String message) {
+        system.out().println(message);
     }
 }
